src/test/deca/context/valid/with_object/assign_compatibility.deca
class Animal {}
class Horse extends Animal {}

{
    Animal a = new Horse();
    Horse aa = null;
    Animal aaa = null;

    // Horse c = new Animal();
    // Horse b = new Horse();
    // Horse bb = null;
}