src/test/deca/context/invalid/oracle/assign_compatible_object.deca
class Animal{
    int x, y;
}

{
     Animal animal =  new Object();
}